--- a/.github/workflows/build-pdfs.yaml
+++ b/.github/workflows/build-pdfs.yaml
@@ -18,4 +18,6 @@ jobs:
 
       - name: Build
         run: |
-          make all
+          rmarkdown::render("Supplements.Rmd")
+          rmarkdown::render("Workflow.Rmd")
+        shell: Rscript {0}
