--- a/.github/workflows/build-pdfs.yaml
+++ b/.github/workflows/build-pdfs.yaml
@@ -31,6 +31,6 @@ jobs:
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: pdfs
+          name: BASiCSWorkflow-${{ github.sha }}
           path: |
             Workflow.pdf
